--- a/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPerfiles.html
@@ -14,25 +14,31 @@
 					<img th:src="@{/perfil/{id}/photo(id=${u.id})}" class="w3-hover-opacity imgPerfilBusqueda">
 				</div>
 
-				<!-- Nombre Usuario -->
-				<p><b th:text="${u.nombre +' '+ u.apellidos}">Usuario</b></p>
-
-				<!-- Valoracion -->
-				<div class="score">
-					<th:block th:each="i: ${#numbers.sequence(1, u.score)}">					
-						<i class="fa fa-star w3-margin estrella"></i>
-					</th:block>
-					<i th:if="${#strings.substring(u.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
-				</div>
-
-				<!-- Tags -->
 				
-				<div>
-					<button th:each="tag: ${#strings.listSplit(u.tags, ',')}" class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}">Tag</button>
+
+				<!-- Tarjeta Detalles -->
+				<div class="divCentrado w3-container w3-light-grey w3-round-large w3-margin">
+
+					<!-- Nombre Usuario -->
+					<h3><b th:text="${u.nombre +' '+ u.apellidos}">Usuario</b></h3>
+
+					<!-- Valoracion -->
+					<div class="score">
+						<th:block th:each="i: ${#numbers.sequence(1, u.score)}">					
+							<i class="fa fa-star w3-margin estrella"></i>
+						</th:block>
+						<i th:if="${#strings.substring(u.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
+					</div>
+
+					<!-- Tags -->
+					<div>
+						<button th:each="tag: ${#strings.listSplit(u.tags, ',')}" class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}">Tag</button>
+					</div>
+					
+					<!-- Boton detalles-->
+					<button class="w3-btn btnColor w3-margin btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
+					
 				</div>
-				
-				<!-- Detalles-->
-				<button class="w3-btn btnColor w3-margin btnDetalles" th:attr="data-id=${u.id}">Detalles</button>
 
 			</div>
 		</div>
