--- a/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
+++ b/src/main/resources/templates/fragments/resultadoBusquedaPropuestas.html
@@ -14,23 +14,29 @@
 					<img th:src="@{/propuesta/{id}/photo(id=${prop.id})}" class="w3-hover-opacity imgPerfilBusqueda">
 				</div>
 
-				<!-- Nombre Propuesta -->
-				<p><b th:text="${prop.nombre}"></b></p>
 
-				<!-- Nombre empresa-->
-				<p>Compañia: <b th:text="${prop.empresa.nombre}" class="bNombreEmpresa" th:attr="data-id=${prop.empresa.id}"></b></p>
+				<!-- Tarjeta Detalles -->
+				<div class="divCentrado w3-container w3-light-grey w3-round-large w3-margin">
 
-				<!-- Tags -->
-				<div>
-					<button th:each="tag:${#strings.listSplit(prop.tags, ',')}" class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}"></button>
+					<!-- Nombre Propuesta -->
+					<h3><b th:text="${prop.nombre}"></b></h3>
+
+					<!-- Nombre empresa-->
+					<p>Compañia: <b th:text="${prop.empresa.nombre}" class="bNombreEmpresa" th:attr="data-id=${prop.empresa.id}"></b></p>
+
+					<!-- Tags -->
+					<div>
+						<button th:each="tag:${#strings.listSplit(prop.tags, ',')}" class="w3-button w3-white tags tagFilter" th:attr="data-id=${tag}" th:text="${tag}"></button>
+					</div>
+
+					<!-- Descripcion propuesta (limitar) -->
+					<p th:text="${prop.descripcion}"></p>
+
+					<!-- Detalles-->
+					<button class="w3-btn btnColor w3-margin btnDetalles" th:attr="data-id=${prop.id}">Detalles</button>
+					
 				</div>
-
-				<!-- Descripcion propuesta (limitar) -->
-				<p th:text="${prop.descripcion}"></p>
-
-				<!-- Detalles-->
-				<button class="w3-btn btnColor w3-margin btnDetalles" th:attr="data-id=${prop.id}">Detalles</button>
-
+				
 			</div>		
 		</div>
 	</div>
