--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -1,88 +1,92 @@
-
 <html lang="en">
 
 <head>
-    <th:block th:replace="fragments/head.html :: header"/>
-    <link rel="stylesheet" href="css/inicio.css">
-    <script src="js/inicio.js" type="text/javascript"></script>
+	<th:block th:replace="fragments/head.html :: header" />
+	<script src="js/inicio.js" type="text/javascript"></script>
 	<title>Influencing: Inicio</title>
 </head>
 
 
 
-<body class="general body">
-	
+<body>
+
 	<!-- Header -->
 	<header>
-    	<div th:replace="fragments/navigation.html :: navBar(nombrePagina='INICIO')"></div>
+		<div th:replace="fragments/navigation.html :: navBar(nombrePagina='INICIO')"></div>
 	</header>
-    <!--   Cuerpo de la web  -->
+	<!--   Cuerpo de la web  -->
 
-	<div id="page_block" class="w3-row-padding global-div generalWebBody">
-		<div id= "left_panel" class="w3-third w3-container">
-			<div id="control_panel" class="control_panel w3-display-container">
-				<div id="content" class="content">
-				<h2>Panel de control</h2>
-				<h3>Buscar usuario</h3>
-				<input class="rounded_corner" type="text"  size="40">
-				<input class="rounded_corner" type="submit"  value="Buscar">
-				</br>
-				<h3>Buscar propuesta</h3>
-				<input class="rounded_corner" type="text" size="40">
-				<input class="rounded_corner" type="submit" value="Buscar">
-				</div>
-				<div th:if="${session.u.hasRole('EMPRESA')}" class="divBotonPublicar">
-					<button class="w3-btn btnColor w3-margin w3-display-bottomleft" id="botonCrearPropuesta">Crear propuesta</button>
-				</div>
+	<div class="w3-row divCentrado">
+
+		<!-- Panel de búsqueda -->
+		<div class="w3-col s3 w3-container w3-light-grey w3-round-large w3-margin">
+
+			<h1><b>Panel de búsqueda</b></h1>
+
+			<h3>Buscar usuario</h3>
+			<form class="w3-container w3-margin">
+				<input class="w3-input" type="text" placeholder="Introduzca el nombre del usuario..." required></input>
+				<input class="w3-btn" type="submit" value="Buscar">
+			</form>
+
+			<h3>Buscar propuesta</h3>
+			<form class="w3-container w3-margin">
+				<input class="w3-input" type="text" placeholder="Introduzca el nombre de la propuesta..." required></input>
+				<input class="w3-btn" type="submit" value="Buscar">
+			</form>
+
+			<!-- Boton publicar propuesta [EMPRESA] -->
+			<div th:if="${session.u.hasRole('EMPRESA')}" class="divBotonPublicar">
+				<button class="w3-btn btnColor w3-margin w3-display-bottomleft" id="botonCrearPropuesta">Crear propuesta</button>
 			</div>
 		</div>
-		
-		<div id="messages" class="messages_panel w3-third w3-container">
-				<div class="content">
-					<h2> Notificaciones recientes</h2>
-					<button class="w3-btn btnColor w3-margin">Ver todas las notificaciones</button>
-					<div th:each="mensaje : ${mensajes}" id="message1" class="dark_block">
-						<div class="content">	
-							<p th:text="${mensaje.getEmisor().getNombre() +': '+ mensaje.getDescripcion()}">Emisor + Mensaje</p>
-							</br>
-							</br>
-							<div class="w3-row">
-								<button class="w3-btn w3-dark-grey w3-third">Marcar como leído</button>
-                    			<button class="w3-btn w3-dark-grey w3-third">Eliminar mensaje</button>
-                    			<button class="w3-btn w3-dark-grey w3-third">Ir a la conversación</button>
-							</div>
-						</div>	
-					</div>
+
+		<!-- Panel de notificaciones recientes -->
+		<div class="w3-col s4 w3-container w3-light-grey w3-round-large w3-margin">
+
+			<h1><b>Notificaciones recientes</b></h1>
+
+			<button class="w3-btn btnColor w3-margin" id="botonNotificacionesIni">Ver todas las notificaciones</button>
+
+			<!-- Lista de mensajes -->
+			<div th:each="mensaje : ${mensajes}" id="message1" class="w3-container w3-grey w3-round-large w3-margin">
+				<p th:text="${mensaje.getEmisor().getNombre() +': '+ mensaje.getDescripcion()}"></p>
+				<div class="w3-margin-top">
+					<button class="w3-btn w3-dark-grey w3-third">Marcar como leído</button>
+					<button class="w3-btn w3-dark-grey w3-third">Eliminar mensaje</button>
+					<button class="w3-btn w3-dark-grey w3-third">Ir a la conversación</button>
 				</div>
 			</div>
-		
-		<div id="proposal" class="w3-third w3-container">
-			<div id="proposal_block" class="proposal_block">
-				<div class="content">
-					<h1>Propuestas recientes</h1>
-					<button class="w3-btn btnColor w3-margin" id="verTodasPropuestas">Ver todas las propuestas</button>
-						<div th:each="candidatura : ${candidaturas}" id="proposal1" class="dark_block">
-						<div class="content w3-container">
-							<p th:text="${candidatura.getPropuesta().getEmpresa().getNombre() +': '+ candidatura.getPropuesta().getDescripcion()}">Creador de la propuesta + Descripcion</p>
-                			<div class="w3-row">
-                    			<button class="w3-btn w3-dark-grey w3-third" th:attr="data-id=${candidatura.propuesta.id}">Ver la propuesta</button>
-                    			<button class="w3-btn w3-dark-grey w3-third">Abandonar propuesta</button>
-                    			<button class="w3-btn w3-dark-grey w3-third">Contactar</button>
-                			</div>
-						</div>	
-					</div>
-				</div>
-			</div>
+
 		</div>
+
+		<!-- Panel de propuestas recientes -->
+		<div class="w3-col s4 w3-container w3-light-grey w3-round-large w3-margin">
+
+			<h1><b>Propuestas recientes</b></h1>
+
+
+			<button class="w3-btn btnColor w3-margin" id="verTodasPropuestas" th:href="@{/busquedaPropuesta}">Ver todas las propuestas</button>
+
+			<!-- Lista de propuestas -->
+			<div th:each="candidatura : ${candidaturas}" class="w3-container w3-grey w3-round-large w3-margin">
+				<h3><b th:text="${candidatura.getPropuesta().getEmpresa().getNombre()}"></b></h3>
+				<p th:text="${candidatura.getPropuesta().getDescripcion()}"></p>
+				<button class="w3-btn w3-dark-grey" th:attr="data-id=${candidatura.propuesta.id}">Ver la propuesta</button>
+			</div>
+
+		</div>
+
 	</div>
- 
-        <!-- Mensaje de informacion -->
-	  <p th:text="${mensaje}" id="mensajeInfo" hidden></p>
+
+	<!-- Mensaje de informacion -->
+	<p th:text="${mensaje}" id="mensajeInfo" hidden></p>
+
 	<!-- Footer -->
-    <footer th:replace="fragments/navigation.html :: footer"></footer>
-    
-    <!-- Modal -->
-    <div th:replace="fragments/modal.html"></div>
+	<footer th:replace="fragments/navigation.html :: footer"></footer>
+
+	<!-- Modal -->
+	<div th:replace="fragments/modal.html"></div>
 
 </body>
 
