--- a/src/main/resources/templates/modals/notificaciones.html
+++ b/src/main/resources/templates/modals/notificaciones.html
@@ -4,7 +4,7 @@
     <th:block th:replace="fragments/head.html :: header" />
   </head>
 
-  <body style="width:100%" class="general">
+  <body class="general">
 
     <!-- Header -->
     <header>
