--- a/src/main/resources/templates/modals/denuncia.html
+++ b/src/main/resources/templates/modals/denuncia.html
@@ -9,34 +9,33 @@
 </header>
 
 <body>
-    <form th:action="${modo=='CREACION'}?@{/denuncia/registrar}:@{/denuncia/tramitar}" method="POST" >
+    <form th:action="${modo=='CREACION'}?@{/denuncia/registrar}:@{/denuncia/tramitar}" method="POST">
 
+        <!-- Denunciante-->
+        <div class="w3-container w3-margin-bottom boxDenuncia divFlexSpaceEvenly divCentrado">
+            <div class="divPerfilUsuario">
 
-            <!-- Denunciante-->
-            <div class="w3-container w3-margin-bottom boxDenuncia divFlexSpaceEvenly divCentrado">
-                <div class="divPerfilUsuario">
+                <h2>Nombre del denunciante</h2>
+                <p th:text="${denunciante.nombre}"></p>
 
-                    <h2>Nombre del denunciante</h2>
-                    <p th:text="${denunciante.nombre}"></p>
+                <h2>Rol del denunciante</h2>
+                <p th:text="${denunciante.hasRole('EMPRESA')?'Empresa':'Influencer'}"></p>
 
-                    <h2>Rol del denunciante</h2>
-                    <p th:text="${denunciante.hasRole('EMPRESA')?'Empresa':'Influencer'}"></p>
-
-                    <h2>Valoración del denunciante</h2>
-                    <div class="score" th:if="${denunciante.score!=null}">
-                        <th:block th:each="i: ${#numbers.sequence(1, denunciante.score)}">					
-                            <i class="fa fa-star w3-margin estrella"></i>
-                        </th:block>
-                        <i th:if="${#strings.substring(denunciante.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
-                    </div>
-                    <div class="score" th:if="${denunciante.score == null}">
-                        <p>No tiene valoraciones aun</p>
-                    </div>
-                </div> 
-                <div >
-                    <img class="imgValoracion" th:src="@{/perfil/{id}/photo(id=${denunciante.id})}"/>
+                <h2>Valoración del denunciante</h2>
+                <div class="score" th:if="${denunciante.score!=null}">
+                    <th:block th:each="i: ${#numbers.sequence(1, denunciante.score)}">					
+                        <i class="fa fa-star w3-margin estrella"></i>
+                    </th:block>
+                    <i th:if="${#strings.substring(denunciante.score,2) >= '5'}" class="fa fa-star-half-alt w3-margin estrella"></i>
                 </div>
+                <div class="score" th:if="${denunciante.score == null}">
+                    <p>No tiene valoraciones aun</p>
+                </div>
+            </div> 
+            <div >
+                <img class="imgValoracion" th:src="@{/perfil/{id}/photo(id=${denunciante.id})}"/>
             </div>
+        </div>
 
 			
 
@@ -72,38 +71,46 @@
         <!-- Denuncia -->
         <div class="w3-container w3-margin-bottom boxDenuncia divFlexSpaceEvenly divCentrado">
             <div id="cabecera">
-                <!-- Titulo -->
                 <div th:if="${modo} eq 'CREACION'">
+
                     <!-- Valor id denunciado oculto-->
                     <input type="hidden" name="idDenunciado" th:value="${denunciado.id}">
 
-                        <h1>Título</h1>
-                        <input type="text" name="titulo" placeholder="Introduzca el título de la denuncia" size="50" class="w3-center">
+                    <!-- Titulo -->
+                    <h1>Título</h1>
+                    <input type="text" name="titulo" maxlength="100" placeholder="Introduzca el título de la denuncia" size="50" class="w3-center" required>
 
-                    
+                    <!-- Descripcion -->
                     <h1>Descripción</h1>
-                    <textarea name="descripcion" rows = "8" cols = "70" required placeholder="Introduzca la descripción de la denuncia"></textarea>
+                    <textarea name="descripcion" rows = "8" cols = "70" maxlength="500" placeholder="Introduzca la descripción de la denuncia" required></textarea>
+
                 </div>
                 <div th:unless="${modo} eq 'CREACION'">
+
                     <!-- Valor id denuncia oculto-->
                     <input type="hidden" name="idDenuncia" th:value="${denuncia.id}">
+
+                    <!-- Titulo -->
                     <h1>Título</h1>
                     <p th:text="${denuncia.titulo}"></p>
+
+                    <!-- Descripcion -->
                     <h1>Descripción</h1>
                     <p th:text="${denuncia.descripcion}"></p>
-                </div>
 
+                </div>
             </div>
-          
         </div>
 
-         <input type="hidden" name="ruta" th:value="${ruta}">
+        <!-- Valor ruta oculto -->
+        <input type="hidden" name="ruta" th:value="${ruta}">
+
         <!-- Botones interactivos -->
         <div class="divCentrado">
             <button th:if="${modo} eq 'CREACION'" class="w3-btn btnColor w3-margin" type="submit">Enviar denuncia</button>
             <button th:if="${modo} eq 'TRAMITACION'" class="w3-btn btnColor w3-margin" type="submit">Marcar como tramitada</button>
         </div>
-    </div>
+
     </form>
     
     <!-- Boton de cerrar -->
