Arreglado tramitar denuncia

--- a/src/main/resources/templates/busquedaPerfil.html
+++ b/src/main/resources/templates/busquedaPerfil.html
@@ -26,6 +26,9 @@
 	<!-- Modal -->
 	<div th:replace="fragments/modal.html"></div>
 
+	<!-- Mensaje de informacion -->
+	<p th:text="${mensaje}" id="mensajeInfo" hidden></p>
+	
 </body>
 
 </html>
